# hamming_code

./: README.md  pyproject.toml
hamming_code/: single_error_detecting_codes.py
tests/: test_disturbance.py
